# rustism

./: Cargo.toml  index.html  sim.d.ts  sim.js  sim_bg.wasm.d.ts
libs/natural-selection/: Cargo.toml
libs/natural-selection/src/: chromosome.rs  individual.rs  lib.rs  mutation.rs  selection.rs
libs/natural-selection/src/crossover/: uniform.rs
libs/natural-selection/src/mutation/: gaussian.rs
libs/natural-selection/src/selection/: roulette.rs
libs/neural-network/: Cargo.toml
libs/neural-network/src/: lib.rs
sim/: Cargo.toml
sim/src/: debug.rs  main.rs
