[package]
name = "sim"
version = "0.0.0"
edition = "2021"

[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.9" }
bevy-inspector-egui = "0.15"
lib-neural-network = { path = "../libs/neural-network" }
lib-natural-selection = { path = "../libs/natural-selection" }
rand = "0.8"
rand_chacha = "0.3"
fnv = "1.0"